// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds notification views fetches notifications omitting mentions and replies by a muted user 1`] = `
Array [
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "dan.test",
      "viewer": Object {
        "following": "record(1)",
        "muted": true,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "repost",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(2)",
      },
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "displayName": "bobby",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "cid": "cids(4)",
              "mimeType": "image/jpeg",
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(2)",
        },
      },
      "text": "hear that",
    },
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "dan.test",
      "viewer": Object {
        "following": "record(1)",
        "muted": true,
      },
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(2)",
      },
    },
    "uri": "record(6)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(9)",
        "following": "record(8)",
        "muted": true,
      },
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(10)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(7)",
        "uri": "record(10)",
      },
    },
    "uri": "record(7)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "displayName": "bobby",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
    "cid": "cids(8)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(2)",
      },
    },
    "uri": "record(11)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "displayName": "bobby",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(5)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(9)",
        "following": "record(8)",
        "muted": true,
      },
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(9)",
  },
]
`;

exports[`pds notification views fetches notifications omitting mentions and replies for taken-down posts 1`] = `
Array [
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(3)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(3)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
      },
      "text": "indeed",
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "dan.test",
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "repost",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(4)",
      },
    },
    "uri": "record(5)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(9)",
        "following": "record(8)",
        "muted": false,
      },
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "cid": "cids(6)",
              "mimeType": "image/jpeg",
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
      },
      "text": "hear that",
    },
    "uri": "record(7)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "dan.test",
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(7)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(4)",
      },
    },
    "uri": "record(10)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(8)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(12)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(9)",
        "uri": "record(12)",
      },
    },
    "uri": "record(11)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(9)",
        "following": "record(8)",
        "muted": false,
      },
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(4)",
      },
    },
    "uri": "record(13)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(9)",
        "following": "record(8)",
        "muted": false,
      },
    },
    "cid": "cids(11)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(9)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(2)",
  },
]
`;

exports[`pds notification views fetches notifications with a last-seen 1`] = `
Array [
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(3)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(3)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
      },
      "text": "indeed",
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "dan.test",
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "repost",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(4)",
      },
    },
    "uri": "record(5)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
      },
      "text": "of course",
    },
    "uri": "record(7)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "cid": "cids(7)",
              "mimeType": "image/jpeg",
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
      },
      "text": "hear that",
    },
    "uri": "record(8)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "dan.test",
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(8)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "vote",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(4)",
      },
    },
    "uri": "record(11)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "vote",
    "reasonSubject": "record(13)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(10)",
        "uri": "record(13)",
      },
    },
    "uri": "record(12)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(11)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "vote",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(4)",
      },
    },
    "uri": "record(14)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "dan.test",
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "mention",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Object {
            "end": 18,
            "start": 0,
          },
          "type": "mention",
          "value": "user(3)",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "uri": "record(15)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(13)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(10)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(14)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(2)",
  },
]
`;

exports[`pds notification views fetches notifications without a last-seen 1`] = `
Array [
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(3)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(3)",
          "uri": "record(3)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
      },
      "text": "indeed",
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "dan.test",
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "repost",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(4)",
      },
    },
    "uri": "record(5)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
      },
      "text": "of course",
    },
    "uri": "record(7)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "cid": "cids(7)",
              "mimeType": "image/jpeg",
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(4)",
        },
      },
      "text": "hear that",
    },
    "uri": "record(8)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "dan.test",
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(8)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(4)",
      },
    },
    "uri": "record(11)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(13)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(10)",
        "uri": "record(13)",
      },
    },
    "uri": "record(12)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(11)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "vote",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.feed.vote",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "direction": "up",
      "subject": Object {
        "cid": "cids(2)",
        "uri": "record(4)",
      },
    },
    "uri": "record(14)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "handle": "dan.test",
      "viewer": Object {
        "following": "record(6)",
        "muted": false,
      },
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "mention",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Object {
            "end": 18,
            "start": 0,
          },
          "type": "mention",
          "value": "user(3)",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "uri": "record(15)",
  },
  Object {
    "author": Object {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "viewer": Object {
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(13)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(10)",
  },
  Object {
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(0)",
      "handle": "carol.test",
      "viewer": Object {
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(14)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "declarationCid": "cids(1)",
        "did": "user(3)",
      },
    },
    "uri": "record(2)",
  },
]
`;
